// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test input clear 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-48" type="text">
        <!--v-if-->
      </div>
      <div class="var-field-decorator__icon"><i class="var-icon var-icon--set var-icon-close-circle var-field-decorator__clear-icon" style="transition-duration: 0ms;" var-field-decorator-cover=""></i></div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller var-field-decorator--focus" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-16" type="text"><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--focus var-field-decorator--placeholder-hint" style="--field-decorator-placeholder-max-width: 0px; transform: translate(-0, 0);" for="var-input-16"></label>
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot var-field-decorator--line-focus"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 2`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-16" type="text"><label class="var-field-decorator__placeholder var--ellipsis" style="--field-decorator-placeholder-max-width: 100%;" for="var-input-16"></label>
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 3`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller var-field-decorator--focus" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><textarea class="var-input__input var-input--textarea" autocomplete="new-password" id="var-input-21" type="text" rows="8" style="resize: none;">
      </textarea><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--focus var-field-decorator--placeholder-hint" style="--field-decorator-placeholder-max-width: 0px; transform: translate(-0, 0);" for="var-input-21"></label>
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot var-field-decorator--line-focus"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events test input focus & blur 4`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><textarea class="var-input__input var-input--textarea" autocomplete="new-password" id="var-input-21" type="text" rows="8" style="resize: none;">
      </textarea><label class="var-field-decorator__placeholder var--ellipsis" style="--field-decorator-placeholder-max-width: 100%;" for="var-input-21"></label>
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input hint to be false 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text;">
      <div class="var-field-decorator__icon var-field-decorator--non-hint"></div>
      <div class="var-field-decorator__wrap var-field-decorator--wrap-non-hint">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-43" type="text" style="--input-placeholder-color: var(--field-decorator-blur-color);">
        <!--v-if-->
      </div>
      <div class="var-field-decorator__icon var-field-decorator--non-hint">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input maxlength 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-36" type="text" maxlength="100">
        <!--v-if-->
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>4/100</div>
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test input size 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard var-field-decorator--small">
    <div class="var-field-decorator__controller" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-11" type="text">
        <!--v-if-->
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input validation 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller var-field-decorator--error" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><input class="var-input__input var-input--error var-input--caret-error" autocomplete="new-password" id="var-input-66" type="text"><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--error var-field-decorator--placeholder-hint" style="--field-decorator-placeholder-max-width: 0px; transform: translate(-0, 0);" for="var-input-66"></label>
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line var-field-decorator--line-error">
      <div class="var-field-decorator__dot var-field-decorator--line-error"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>长度必须大于3</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test input validation 2`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-66" type="text"><label class="var-field-decorator__placeholder var--ellipsis" style="--field-decorator-placeholder-max-width: 100%;" for="var-input-66"></label>
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input validation 3`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-66" type="text"><label class="var-field-decorator__placeholder var--ellipsis var-field-decorator--placeholder-hint" style="--field-decorator-placeholder-max-width: 0px; transform: translate(-0, 0);" for="var-input-66"></label>
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input variant 1`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--standard">
    <div class="var-field-decorator__controller" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-1" type="text">
        <!--v-if-->
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <div class="var-field-decorator__line">
      <div class="var-field-decorator__dot"></div>
    </div>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input variant 2`] = `
"<div class="var-input var--box">
  <div class="var-field-decorator var--box var-field-decorator--outlined">
    <div class="var-field-decorator__controller" style="cursor: text;">
      <div class="var-field-decorator__icon"></div>
      <div class="var-field-decorator__wrap">
        <!--v-if--><input class="var-input__input" autocomplete="new-password" id="var-input-6" type="text">
        <!--v-if-->
      </div>
      <div class="var-field-decorator__icon">
        <!--v-if-->
      </div>
    </div>
    <fieldset class="var-field-decorator__line var--box">
      <legend class="var-field-decorator__line-legend var-field-decorator__line-legend--hint"><span class="var-field-decorator__line-legend-placeholder"></span></legend>
    </fieldset>
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
